// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer() @@init 1`] = `
"Snapshot Diff:
  Comparing two different types of values. Expected undefined but received boolean."
`;

exports[`reducer() TIMESHEET-PC/UI/DAILY_OBJECTIVELY_EVENT_LOG_DIALOG/CLOSE 1`] = `
"Snapshot Diff:
- First value
+ Second value

- true
+ false"
`;

exports[`reducer() TIMESHEET-PC/UI/DAILY_OBJECTIVELY_EVENT_LOG_DIALOG/OPEN 1`] = `
"Snapshot Diff:
- First value
+ Second value

- false
+ true"
`;
